# SymbAnaFis

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README_PYTHON.md  basic_output.txt  basic_output_v2.txt  chain_output.txt  custom_output.txt  implicit_output.txt  pyproject.toml  test_output.txt  test_output_2.txt
.agent/workflows/: add-function.md  add-simplification-rule.md
.github/workflows/: manual_benchmark.yml  publish.yml
benches/: BENCHMARK_COMPARISON.md  BENCHMARK_RESULTS.md  CI_Bench_Results.md  OUTPUT_COMPARISON.md  bench_output.txt  benchmark.rs  eval_comparison.rs  eval_comparison_sympy.py  symbolica_bench.rs  sympy_bench.py
benches/python/: bench_runner.py  bench_symb_anafis.py  bench_sympy.py
benches/rust/: benchmark.rs  benchmark_parallel.rs  benchmark_symbolica.rs  eval_comparison.rs  expressions.rs  large_expr.rs  symbolica_bench.rs
crates/num-anafis/: Cargo.toml
crates/num-anafis/examples/: deep_capabilities.rs  example.rs
crates/num-anafis/src/: error.rs  lib.rs
crates/num-anafis/src/number/: api.rs  mod.rs
crates/num-anafis/src/number/logic/: clifford_number.rs  interval.rs  mod.rs  scalar.rs  tests.rs  vector.rs
crates/num-anafis/src/number/logic/float_ops/: api.rs  astro_ops.rs  f32_ops.rs  f64_ops.rs  mod.rs  rug_ops.rs
crates/num-anafis/src/number/logic/int_math/: api.rs  bigint_math.rs  i32_math.rs  i64_math.rs  mod.rs
crates/num-anafis/src/special/: api.rs
crates/num-anafis/src/special/logic/: evaluate.rs  mod.rs
crates/num-anafis/tools/: import_audit.py  import_graph.dot
docs/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_BOUNDARIES.md  ORGANIZATION.md  ROADMAP.md  ROADMAP_v0.3.1_POLY.md
examples/: README.md  advanced_functions.rs  aizawa_flow.py  api_showcase.py  api_showcase.rs  applications.rs  basic.rs  calculus_applications.rs  chain_rule.rs  clifford_benchmark.py  complex_nested.rs  custom_definitions.rs  custom_functions.rs  debug_power.rs  debug_quotient.rs  debug_root.rs  debug_trig.rs  domain_safety.rs  double_pendulum_benchmark.py  dual_autodiff.rs  dump_large_expr.rs  expr_with_4649517_caracters-comparison.rs  features.rs  flamegraph_benchmarks.rs  flamegraph_compile_eval.rs  flamegraph_profile.rs  gradient_descent.py  implicit_functions.rs  instruction_dump.rs  nth_derivative.rs  physics_engineering.rs  polynomial_test.rs  profile_pipeline.rs  quickstart.rs  raw_diff_comparison.rs  simplification_comparison.rs  sinc_derivative_fix.rs  test_division_display.rs  verification.rs  video_writer.py  (+2 more)
examples/benchmarks/: expr_with_4649517_caracters-comparison.rs  flamegraph_benchmarks.rs  flamegraph_compile_eval.rs  flamegraph_profile.rs  simplification_comparison.rs
examples/python/: double_pendulum_benchmark.py  gradient_descent.py
python/symb_anafis/: __init__.py  __init__.pyi
src/: ast.rs  builder.rs  differentiation.rs  display.rs  helpers.rs  lib.rs  parallel.rs  poly.rs  python.rs  symbol.rs  uncertainty.rs  visitor.rs
src/api/: builder.rs  helpers.rs
src/bindings/: eval_f64.rs  mod.rs  parallel.rs  python.rs
src/bindings/python/: api.rs  builder.rs  context.rs  dual.rs  error.rs  evaluator.rs  expr.rs  functions.rs  mod.rs  parallel.rs  symbol.rs  utilities.rs  view.rs  visitor.rs
src/convenience/: api.rs  mod.rs
src/convenience/logic/: calculus.rs  evaluation.rs  mod.rs  tests.rs
src/core/: api_crate.rs  api_user.rs  display.rs  error.rs  evaluator.rs  expr.rs  known_symbols.rs  mod.rs  poly.rs  symbol.rs  traits.rs  unified_context.rs  visitor.rs
src/core/context/: api.rs  api_crate.rs  api_user.rs  mod.rs
src/core/context/logic/: context.rs  mod.rs  tests.rs
src/core/expr/: analysis.rs  api.rs  api_crate.rs  api_user.rs  constructors.rs  evaluate.rs  hash.rs  mod.rs  ordering.rs
src/core/expr/logic/: analysis.rs  (+9 more)
src/core/helpers/: api.rs  api_crate.rs  api_user.rs  mod.rs
src/core/logic/: mod.rs  poly.rs  tests.rs  traits.rs  visitor.rs
src/core/symbol/: api.rs  api_crate.rs  api_user.rs  interned.rs  math_methods.rs  mod.rs  operators.rs  registry.rs
src/diff/: api.rs  engine.rs  mod.rs
src/diff/logic/: engine.rs  mod.rs  tests.rs
src/evaluator/: api.rs  compiler.rs  eval_math.rs  execution.rs  instruction.rs  mod.rs  simd.rs  stack.rs  tests.rs
src/evaluator/logic/: instruction.rs  mod.rs  tests.rs
src/functions/: api.rs  context.rs  definitions.rs  mod.rs  registry.rs
src/functions/logic/: mod.rs  registry.rs
src/math/: api.rs  bessel.rs  dual.rs  elliptic.rs  mod.rs  polynomials.rs  special.rs  validation.rs
src/math/logic/: mod.rs  tests.rs
src/parser/: api.rs  implicit_mul.rs  lexer.rs  mod.rs  pratt.rs  tokens.rs
src/parser/logic/: implicit_mul.rs  lexer.rs  mod.rs  pratt.rs  test.rs  tokens.rs
src/simplification/: README.md  algebraic.rs  api.rs  engine.rs  helpers.rs  hyperbolic.rs  log_exp.rs  mod.rs  numeric.rs  roots.rs  trig.rs
src/simplification/logic/: engine.rs  helpers.rs  mod.rs  tests.rs
src/simplification/patterns/: mod.rs
src/simplification/rules/: mod.rs
src/tests/: actual_division_bug.rs  advanced_simplification_tests.rs  advanced_tests.rs  api_contract_tests.rs  api_parity_checks.rs  benchmark_tests.rs  closure_check.rs  comprehensive_api_tests.rs  custom_functions.rs  debug_applications.rs  debug_division_structure.rs  debug_factoring_logic.rs  debug_gaussian_cycle.rs  debug_issue.rs  debug_rc.rs  debug_root.rs  debug_root_issue.rs  derivative_oracle_tests.rs  derivative_regressions.rs  display_precedence_test.rs  division_bug_verification.rs  edge_case_tests.rs  eval_consistency_tests.rs  eval_func_tests.rs  evaluator_expansion.rs  fraction_simplification_tests.rs  fuzz.rs  fuzz_evaluator.rs  fuzz_math_modules.rs  hyperbolic_conversion_tests.rs  integration_tests.rs  log_power_tests.rs  log_simplification_tests.rs  mod.rs  normalization_check.rs  numerical_accuracy_tests.rs  power_debug.rs  power_root_tests.rs  power_simplification_tests.rs  precision_audit.rs  (+25 more)
src/uncertainty/: api.rs  mod.rs
src/uncertainty/logic/: mod.rs  propagate.rs  tests.rs
tools/: import_audit.py  import_graph.dot
(+186 files in other folders)
