[package]
name = "symb_anafis"
version = "0.1.0"
edition = "2024"
authors = ["CokieMiner"]
description = "Fast symbolic differentiation library for Rust"
license = "MIT"
repository = "https://github.com/CokieMiner/symb_anafis"
keywords = ["symbolic", "differentiation", "calculus", "mathematics", "derivatives"]
categories = ["mathematics", "science"]

[dependencies]

[dev-dependencies]
criterion = "0.7.0"

