[package]
name = "symb_anafis"
version = "0.9.0"
edition = "2024"
authors = ["CokieMiner"]
description = "Fast symbolic differentiation library for Rust"
license = "Apache-2.0"
repository = "https://github.com/CokieMiner/SymbAnaFis"
keywords = [
    "symbolic",
    "differentiation",
    "calculus",
    "mathematics",
    "derivatives",
]
categories = ["mathematics", "science"]
exclude = [
    "videos/*",
    "benches/bench_output.txt",
    ".github/*",
    ".agent/*",
    "target/*",
    "*.mp4",
]

[lib]
name = "symb_anafis"
crate-type = ["cdylib", "rlib"]

[dependencies]
num-traits = "0.2.19"
rustc-hash = "2.1.1"
slotmap = { version = "1.1.1" }
numpy = { version = "0.28.0", optional = true }
pyo3 = { version = "0.28.2", features = ["extension-module"], optional = true }
rayon = { version = "1.11.0", optional = true }
wide = { version = "1.2.0", optional = true }

[dev-dependencies]
ahash = "0.8.12"
criterion = "0.8.2"
dotenvy = "0.15.7"
quickcheck = "1.1.0"
rand = "0.10.0"
symbolica = "1.4.0"

[features]
default = []
python = ["pyo3", "numpy"]
parallel = ["rayon", "wide"]

[[bench]]
name = "benchmark"
harness = false
path = "benches/rust/benchmark.rs"

[[bench]]
name = "benchmark_symbolica"
harness = false
path = "benches/rust/benchmark_symbolica.rs"

[[bench]]
name = "large_expr"
harness = false
path = "benches/rust/large_expr.rs"

[[bench]]
name = "benchmark_parallel"
harness = false
path = "benches/rust/benchmark_parallel.rs"
required-features = ["parallel"]

# =============================================================================
# EXPLICIT EXAMPLES
# =============================================================================

[[example]]
name = "flamegraph_benchmarks"
path = "examples/benchmarks/flamegraph_benchmarks.rs"

[[example]]
name = "flamegraph_compile_eval"
path = "examples/benchmarks/flamegraph_compile_eval.rs"

[[example]]
name = "flamegraph_profile"
path = "examples/benchmarks/flamegraph_profile.rs"

[[example]]
name = "profile_pipeline"
path = "examples/benchmarks/profile_pipeline.rs"

[[example]]
name = "simplification_comparison"
path = "examples/benchmarks/simplification_comparison.rs"

[[example]]
name = "expr_with_4649517_caracters-comparison"
path = "examples/benchmarks/expr_with_4649517_caracters-comparison.rs"

# ============================================================================
# Lints Configuration (applies to lib, tests, examples, benches)
# ============================================================================
[lints.rust]
# SAFETY & DOCUMENTATION
unsafe_code = "deny"
missing_docs = "deny"
let_underscore_drop = "deny"


[lints.rustdoc]
broken_intra_doc_links = "deny"

[lints.clippy]
# Base: Ativa todos os avisos standard
all = { level = "deny", priority = -1 }

# =============================================================================
# QUALITY & STYLE (PEDANTIC)
# =============================================================================
pedantic = { level = "deny", priority = -1 }

# =============================================================================
# NURSERY (EXPERIMENTAL BUT VALUABLE)
# =============================================================================
nursery = { level = "deny", priority = -1 }

# =============================================================================
# CODE QUALITY & STYLE (RESTRICTION)
# =============================================================================
allow_attributes_without_reason = "deny" # Require explicit reasons for allow attributes
clone_on_ref_ptr = "deny"                # Avoid double indirection performance hit
create_dir = "deny"                      # Force error handling for filesystem ops
dbg_macro = "deny"                       # No debug artifacts in production (upgraded)
empty_drop = "deny"                      # Detect accidentally empty Drop implementations
empty_structs_with_brackets = "deny"     # Consistent struct syntax
exit = "deny"                            # No hard exits in library code
filetype_is_file = "deny"                # More robust file type checking
fn_to_numeric_cast = "deny"              # Prevent function pointer casting bugs
format_push_string = "deny"              # Performance: use write! instead of format!
get_unwrap = "deny"                      # Use [] indexing instead of get().unwrap()
if_then_some_else_none = "deny"          # Use bool::then_some for clarity
inline_asm_x86_att_syntax = "deny"       # Consistent ASM syntax if used
inline_asm_x86_intel_syntax = "deny"    # Consistent ASM syntax
integer_division = "deny"                # Force explicit float division
large_include_file = "deny"              # No embedding huge files
let_underscore_must_use = "deny"         # Don't ignore important return values
lossy_float_literal = "deny"             # Stricter float precision (upgraded)
map_err_ignore = "deny"                  # Don't lose error context
mem_forget = "deny"                      # No memory leaks
mixed_read_write_in_expression = "deny"  # Avoid subtle bugs
mutex_atomic = "deny"                    # Performance critical (upgraded)
non_ascii_literal = "deny"               # Keep code portable
panic_in_result_fn = "deny"              # No panics in Result-returning functions
partial_pub_fields = "deny"              # Consistent field visibility
print_stderr = "deny"                    # No side effects to stderr
print_stdout = "deny"                    # No side effects to stdout (upgraded)
pub_without_shorthand = "deny"           # Consistent pub syntax
rc_buffer = "deny"                       # Memory efficiency (upgraded)
rc_mutex = "deny"                        # Performance: prefer Arc<Mutex<T>>
redundant_type_annotations = "deny"      # Clean up unnecessary annotations
rest_pat_in_fully_bound_structs = "deny" # Explicit field handling
same_name_method = "deny"                # Avoid confusing method names
self_named_module_files = "deny"         # Consistent module naming
semicolon_inside_block = "deny"          # Consistent semicolon style
shadow_unrelated = "deny"                # Prevent confusing variable shadowing
single_char_lifetime_names = "deny"      # Descriptive lifetime names
unnecessary_self_imports = "deny"        # Clean imports
unneeded_field_pattern = "deny"          # Clean pattern matching
unseparated_literal_suffix = "deny"      # Readable numeric literals
use_debug = "deny"                       # No Debug in production formatting
verbose_file_reads = "deny"              # Use fs::read_to_string when appropriate

# =============================================================================
# PERFORMANCE (HPC FOCUSED)
# =============================================================================
large_stack_arrays = "deny"              # Prevent stack overflows (upgraded)
perf = { level = "deny", priority = -1 }
str_to_string = "deny"                   # Performance: avoid unnecessary allocations
string_add = "deny"                      # Performance: use format! or push_str
string_slice = "deny"                    # Performance: consider &str instead
suboptimal_flops = "deny"                # Mathematical precision is critical (upgraded)

# =============================================================================
# ROBUSTNESS & ERROR HANDLING
# =============================================================================
debug_assert_with_mut_call = "deny" # Side effects in debug asserts
missing_panics_doc = "deny"         # Document when functions can panic
panic = "deny"                      # No panics in library code
todo = "deny"                       # No unfinished code (upgraded)
try_err = "deny"                    # Use ? operator consistently
undocumented_unsafe_blocks = "deny" # All unsafe must be documented
unimplemented = "deny"              # No unfinished implementations
unreachable = "deny"                # All code paths must be explicitly handled
unwrap_used = "deny"                # No unwraps - use expect with context

# =============================================================================
# MATH PRECISION & CORRECTNESS
# =============================================================================
imprecise_flops = "deny"            # Mathematical precision critical (upgraded)
suspicious_xor_used_as_pow = "deny" # Catch common XOR/pow confusion
